@@ -1,5 +1,11 @@
 2008-11-11  Curtis Gedak  <gedakc@gmail.com>
 
+	* src/Dialog_Partition_Info.cc,
+	  src/GParted_Core.cc:  Added read UUID read display.
+
+	* include/Partition.h,
+	  src/Partition.h: Added UUID.
+
 	* include/FS_Info.h,
 	  include/Makefile.am,
 	  src/FS_Info.cc,
